# mcp_ragger

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README.pt-br.md  benchmark.py  benchmark_golden.py  docker-compose.yml  indexer.py  mcp_server.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh  start.ps1  start.py  start.sh  stats.py
benchmarks/: after-semantic-metadata-chunking-2026-04-28.txt  after-semantic-metadata-chunking-v2-2026-04-28.txt  after-semantic-metadata-chunking-v3-2026-04-28.txt  after-semantic-metadata-rerank-2026-04-28.txt  baseline-before-semantic-chunking-2026-04-28.txt  expanded-rerank-2026-04-28.txt  expanded-rerank-calibrated-2026-04-28.txt
docs/: benchmark-roadmap.md
scripts/: benchmark.py  benchmark_golden.py  benchmark_ragas.py  setup.ps1  setup.sh  start.ps1  start.py  start.sh  stats.py
src/langchain_rag_mcp/: __init__.py  config.py  embeddings.py  env.py  indexer.py  loaders.py  metrics.py  retrieval.py  search.py  server.py  startup.py
src/langchain_rag_mcp/evals/: __init__.py  openrouter_judge.py  ragas_runner.py
tests/: test_benchmark_ragas.py  test_config.py  test_entrypoints.py  test_golden_benchmark.py  test_indexer_incremental.py  test_indexer_sources.py  test_loaders.py  test_metrics.py  test_openrouter_judge.py  test_ragas_runner.py  test_retrieval.py  test_search.py  test_start.py
