[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-rag-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "mcp",
  "qdrant-client",
  "httpx",
  "langchain-google-genai",
  "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
langchain-rag-mcp = "langchain_rag_mcp.server:main"
langchain-rag-indexer = "langchain_rag_mcp.indexer:main"
langchain-rag-start = "langchain_rag_mcp.startup:cli_main"
