[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-rag-mcp"
version = "0.1.0"
description = "MCP server exposing a RAG pipeline over LangChain, LangGraph and LangSmith official documentation"
authors = [{ name = "Eder Domenici", email = "domenicieder@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
  "mcp",
  "qdrant-client",
  "httpx",
  "langchain-google-genai",
  "python-dotenv",
]

[project.optional-dependencies]
eval = [
  "openai",
  "ragas",
]

[project.urls]
Homepage = "https://github.com/EderDomenici/mcp_ragger"
Repository = "https://github.com/EderDomenici/mcp_ragger"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
langchain-rag-mcp = "langchain_rag_mcp.server:main"
langchain-rag-indexer = "langchain_rag_mcp.indexer:main"
langchain-rag-start = "langchain_rag_mcp.startup:cli_main"
